test/bad/functions/variadic05.px

func f(...x: [Bool]): Void def
    return

f(1, 2)
